# psa

./: AUTHORS  CMakeLists.txt  Makefile  README.md
bindings/: FlusSolver.i  flus.i  makefile  setup.py  test.py  test_labyrinthe.py
bindings/include/armanpy/: armanpy.hpp  armanpy.i  armanpy_1d.i  armanpy_2d.i  armanpy_3d.i
doc/: Doxyfile
examples/json/: gaussien_in_null_field.json
examples/video/: gaussian.avi
exec/: flup  flupp  flus
exemples/json/: HO_test.json  gaussien_in_null_field.json  young-slits.json
exemples/video/: gaussian.avi
gtest/googletest/: CMakeCache.txt
gtest/googletest/scripts/test/: sample1_unittest
gtest/googletest/scripts/test/output/gtest/: gtest-all.cc  gtest.h
pres/: index.html
pres/videos/: nice.webm  young.webm
src/: SchemeBTCS.cpp  SchemeCTCS.cpp  SchemeFTCS.cpp  SchemeFTCS.h  Solver.cpp  Solver.h  db-config.json  gaussian.py  main.cpp  modules  solver.cpp  solver.h  solver.i  solver_btcs.cpp  solver_btcs.h  solver_ctcs.cpp  solver_ctcs.h
src/flup/: HO.cpp  HO.h  HO.py  gaussian.py  picture_loader.py  preprocessor.py  processor.py
src/flupp/: gaussian.py  preprocessor.py
src/flus/: SchemeBTCS.cpp  SchemeBTCS.h  SchemeCTCS.cpp  SchemeCTCS.h  SchemeFTCS.cpp  Solver.cpp  Solver.h  modules  solver.py
src/utils/: Repository.py
tests/: TestSchemeBTCS.cpp  TestSchemeCTCS.cpp  TestSchemeFTCS.cpp  TestSchemeIntra.cpp  modules  tests_btcs.cpp  tests_ctcs.cpp
